<resources>
    <string name="instr"><i><b>Selecciona un técnico de la lista para poder iniciar la sesión con su perfil</b></i></string>
    <string name="app_name">AT Services</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_registro">Registro de Devolución</string>
    <string name="title_activity_menu__devolucion">Menú de Devolucion</string>
    <string name="title_activity_lista__devolucion">Lista de Devoluciones</string>
    <string name="title_reporte_devoluciones">Menú de Reportes</string>
    <string name="title_registro_memorias">Registro de Memorias</string>
    <string name="title_devolucion_memorias">Reporte de Memorias</string>
    <string name="error_field_required">El mensaje esta vacio </string>
    <string name="ingresar">Ingresar</string>
    <string name="hintBusqueda"><i>Ingresa una palabra de búsqueda</i></string>
    <string name="infoDialogoBusqueda"><b><i>Ingresa una palabra de búsqueda, y oprime el boton buscar (lupa)
        , y a continuación elige el técnico que corresponda a tu búsqueda.</i></b></string>
    <string name="generarDevolucion">Devolución de Material</string>
    <string name="reporteDevoluciones">Reporte de Devoluciones</string>
    <string name="menuInicial">Selecciona una opción</string>
    <string name="devolucionMemorias">Devolución de Memorias</string>
    <string name="pedidos">Pedidos</string>
    <string name="foliosPendientes">Folios Pendientes</string>
    <string name="adeudoMaterial">Adeudo de Material</string>
    <string name="osAsignadas">OS Asignadas</string>
    <string name="DevolverMemorias">Devolucion de Memorias</string>
    <string name="materiales">Materiales</string>
    <string name="salida">SALIDA</string>
    <string name="enviar">Enviar</string>
    <string name="infoEditar"><i>Toca un elemento de la lista para editarlo si así lo requieres.
        En No. Guía, toca el taxi o mensaje si no dispones de tal número</i></string>
    <string name="usuario">Usuario</string>
    <string name="usuarioDots">Usuario:</string>
    <string name="contrasena">Contraseña</string>
    <string name="contrasenaDots">Contraseña:</string>
    <string name="crearListaDev">CREAR LISTA DE DEVOLUCIÓN</string>
    <string name="sala">Sala:</string>
    <string name="crear">Crear</string>
    <string name="region">Región</string>
    <string name="tipoDeDev">Tipo de devolución</string>
    <string name="salidaNO">Salida NO.</string>
    <string name="codigo">Código:</string>
    <string name="cantidad">Cantidad:</string>
    <string name="serie">Serie:</string>
    <string name="verLista">Ver Lista</string>
    <string name="descripcion">Descripción</string>
    <string name="escaner">Escáner</string>
    <string name="tvDescripcion"><i>Esperando descripción de la pieza...</i></string>
    <string name="hintSeisDigitos"><i>Ingresa 6 dígitos</i></string>
    <string name="hintPedido"><i>Ingresa Pedido</i></string>
    <string name="hintNoGuia"><i>Ingresa el No. de guía</i></string>
    <string name="pedido">Pedido:</string>
    <string name="noGuia">No. Guía:</string>
    <string name="verificarPedido">Verificar</string>
    <string name="reporteDeDevoluciones">Reportes de Devoluciones</string>
    <string name="seleccionaSala">Selecciona una sala</string>
    <string name="seleccionaSalida">Selecciona un número de salida</string>
    <string name="devolucionesReporte">Devoluciones con los datos seleccionados</string>
    <string name="CODIGO">CODIGO</string>
    <string name="DESCRIPCION">DESCRIPCIÓN</string>
    <string name="CANTIDAD">CANTIDAD</string>
    <string name="SERIE">SERIE</string>
    <string name="title_lista_de_devoluciones">Lista de Devoluciones</string>
    <string name="mostrarMas">Mostrar Más</string>
    <string name="TIPO">TIPO</string>
    <string name="FOLIO">FOLIO</string>
    <string name="OS">OS</string>
    <string name="editar">Editar</string>
    <string name="cancelar">Cancelar</string>
    <string-array name="Memorias">
        <item>USB</item>
        <item>Compact Juegos</item>
        <item>Key Pack</item>
        <item>Lector</item>
        <item>Compact</item>
    </string-array>
    <string-array name="Tecnicos">
        <item>SELECCIONA UN TÉCNICO...</item>
        <item>Lizbette Rodríguez - PUEBLA/VERACRUZ</item>
        <item>Gervacio Cerón     - MONTERREY</item>
        <item>Nayeli Malagón     - PENINSULA</item>
        <item>Ángel Garcilazo    - DFZ1</item>
        <item>Guillermo López    - CENTRO</item>
        <item>Juan Luis Vera     - GUADALAJARA</item>
        <item>Federico Jiménez   - DFZ2</item>
        <item>Orlando Enciso     - PACIFICO</item>
        <item>Herli Castañeda    - TIJUANA</item>
    </string-array>
    <string-array name="Opciones">
        <item>ORDINARIA</item>
        <item>BAJA</item>
    </string-array>
    <string name="title_Folios_Pendientes">Folios Pendientes</string>
    <string name="afp_hintIngresaFolio"><i>No. Folio</i></string>
    <string name="afp_Asignar">Asignar</string>
    <string name="afp_FoliosPorSala">Folios Por Sala</string>
    <string name="afp_info"><i><b>En No. Folio, sólo ingresa el número existente entre los guiones del
         número de incidencia</b></i></string>
    <string name="title_reporte_folio_pendiente">Reporte Folio Pendiente</string>
    <string name="rfp_AceptarFolio">Aceptar Folio</string>
    <string name="rfp_RechazarFolio">No Aceptar Folio</string>
    <string name="rfp_Folio">Folio</string>
    <string name="rfp_Sala">Sala</string>
    <string name="rfp_Falla">Falla</string>
    <string name="rfp_SubFalla">Subfalla</string>
    <string name="rfp_Licencia">Licencia</string>
    <string name="rfp_Juego">Juego</string>
    <string name="rfp_Opciones">Opciones</string>
    <string name="rfp_Traslado">Traslado a Sala</string>
    <string name="rfp_Acceso">Acceso a Sala</string>
    <string name="rfp_Atiende">Atiende Incidencia</string>
    <string name="rfp_Estatus">Estatus Incidencia</string>
    <string name="rfp_Repara">Repara Incidencia</string>
    <string name="title_estatus_incidencia">Estatus de Incidencia</string>
    <string name="aei_refaccion">Refacción</string>
    <string name="aei_codigosDeError">Códigos de Error</string>
    <string name="aei_CodigosdeActivacion">Códigos De Activación</string>
    <string name="aei_SistemadeCaja">Sistema de Caja</string>
    <string name="aei_SolucionDeSala">Solución de Sala</string>
    <string name="ePendiente">Pendiente</string>
    <string name="eCancelado">Cancelado</string>
    <string name="eParcial">Parcial</string>
    <string name="eSinExistencia">Sin Existencia</string>
    <string name="eCompleto">Completo</string>
    <string name="addcoment">Añadir</string>
    <string name="hintComent"><i><b>Escribe Comentarios</b></i></string>
    <string name="finalizarActividad">Finalizar Actividad</string>
    <string name="aios_act">Actividad</string>
    <string name="aios_fecInic">Inicio</string>
    <string name="aios_finAct">Fin</string>
    <string name="error_entrega"><b><i>Toca para guardar comentario en servidor</i></b></string>
    <string name="entregado"><b><i>Entregado</i></b></string>
    <string name="aet_Estatus">Estatus</string>
    <string name="aet_Tiempo">Tiem. Act.</string>
    <string name="e_mailIncorrecto">No tienes tu e-mail asociado al sistema\nIngresa con tu usuario y contraseña que se asigno...</string>
    <string name="usuarioIncorrecto">Nombre de usuario o password incorrectos</string>
    <string name="titClientProtExc">Client Protocol Exception</string>
    <string name="titJsonException">Error de conexión con servidor remoto</string>
    <string name="cuerpoJsonException">Error de conexión con servidor remoto</string>
    <string name="cuerpoIOexception">No hay conexión eficiente a Internet\nPrueba reiniciando el WiFi o Datos Móviles del celular; o inclusive reiniciando el equipo</string>
    <string name="titIOexception">Sin conexión de Red</string>
    <string name="titIllegalArgExcep">Illegal Argument Exception</string>
    <string name="cuerpoIllegalArgExcep">El nombre de usuario o contraseña contiene caractéres no válidos</string>
    <string name="conectando">Conectando con servidor...\nEspera por favor</string>
    <string name="sinInternet">El equipo no tiene acceso internet</string>
    <string name="titActDisp">Nueva Actualización Disponible</string>
    <string name="cuerpoActDisp">Hay una nueva actualización disponible de Devolución de Material. La versión de la que dispones ahora es posible que sea obsoleta y no funcione adecuadamente.</string>
    <string name="descargar">Descargar</string>
    <string name="notCall">No se pudo realizar la llamada.</string>
    <string name="pedidosPorSala">Pedidos Por sala</string>
    <string name="pedidosPorIncidencia">Pedidos Por Incidencia</string>
    <string name="solicitud_de_material">Solicitud De Material</string>
    <string name="seleccionaOpcion">Selecciona Una Opción</string>
    <string name="devMat">Devolución De Material</string>
    <string name="adMat">Adeudo de Material</string>
    <string name="repdev">Reporte de Devoluciones</string>
    <string name="bienvenido">¡Bienvenido\u0020</string>
    <string name="sinRegistros">Sin Registros</string>
    <string name="sinIncidencias">No Hay Incidencias Pendientes Registradas</string>
    <string name="campoVacio">El Campo Está Vacío...</string>
    <string name="infoAsigFol">Se asigna el folio, pero tiene actividades registradas</string>
    <string name="infoAsignado">Se ha asignado el folio\u0020</string>
    <string name="infoFolioInex">El número de folio no existe</string>
    <string name="incidencia">La incidencia\u0020</string>
    <string name="atendida">\u0020ya ha sido atendida</string>
    <string name="estActualizado">Estatus Actualizado Correctamente</string>
    <string name="aceptar">Aceptar</string>
    <string name="actRegistrada">La actividad ha sido registrada</string>
    <string name="actRegAnt">Ésta actividad ya ha sido registrada anteriormente</string>
    <string name="regBaja">Se han registrado los datos del técnico para la baja</string>
    <string name="notRegBaja">No se ha podido obtener los datos del técnico. Inténtalo de nuevo</string>
    <string name="infoEstEnSer">Te muestra disponible para que te asignen actividades</string>
    <string name="infoEstPorInc">Te muestra en estatus Por Incidencia</string>
    <string name="infoEstDiaDesc">Muestra que no estas laborando ya que estas en tu día de descanso</string>
    <string name="infoEstMix">Muestra que realizas actividades diversas en sala</string>
    <string name="infoEstVacaciones">Te muestra que estas tomando tu periodo vacacional</string>
    <string name="infoEstIncap">Te muestra no disponible por cuestiones referentes a una molestia o enfermedad</string>
    <string name="titEstFuera">Fuera de Servicio</string>
    <string name="infoEstFuera">Te muestra como No disponible, ya que has concluido con tu jornada laboral</string>
    <string name="titTraslado">Traslado a Sala</string>
    <string name="infoTraslado">Te muestra que estas en proceso de traslado a sala</string>
    <string name="titHoraComida">Hora de Comida</string>
    <string name="infoHoraComida">Te muestra que estas tomando tu hora para ingerir alimentos</string>
    <string name="titFinDiaDesc">Fin de Día de Descanso</string>
    <string name="infoFinDiaDesc">Ha concluido tu día de descanso</string>
    <string name="titFinMix">Fin de Mix</string>
    <string name="infoFinMix">Acabaste con las actividades relacionadas con el Mix</string>
    <string name="titFinVacaciones">Fin de Vacaciones</string>
    <string name="infoFinVacaciones">Has concluido con tu temporada de vacaciones</string>
    <string name="titFinIncap">Fin de Incapacidad</string>
    <string name="infoFinIncap">Ha concluido tu incapacidad</string>
    <string name="aet_Sala_Inicial">Sala Act.</string>
</resources>