<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:id="@+id/llEstatus"
        style="@style/EditTextStyleRojo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:id="@+id/lbl1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/aet_Estatus"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvEstatus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"
                android:textColor="#000000"
                android:textStyle="italic" />
        </LinearLayout>

        <View
            android:id="@+id/view1"
            style="@style/SeparatorLayout" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:id="@+id/lbl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/aet_Tiempo"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvHoras"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"
                android:textColor="#000000"
                android:textStyle="italic" />
        </LinearLayout>

        <View
            android:id="@+id/view2"
            style="@style/SeparatorLayout" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:id="@+id/lbl2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/aet_Sala_Inicial"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/id_tvSalaInicial"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"
                android:textColor="#000000"
                android:textStyle="italic" />
        </LinearLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/lvEstatus"
        style="@style/EditTextStyleRojo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp" />

</LinearLayout>
